# tcga-gdc-downloader

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
tcga_downloader/: __init__.py  app.py  cdr.py  checkpoint.py  cli.py  client.py  constants.py  exceptions.py  matrix.py  merge.py  sample.py
tests/: conftest.py  test_cdr.py  test_client.py  test_integration.py  test_matrix.py  test_merge.py  test_sample.py
