[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcga-gdc-downloader"
version = "2.1.2"
description = "User-friendly tool to download TCGA STAR RNA-seq counts from the GDC portal"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "Orhan Nedim Kurt", email = "ogoncelnedim0@gmail.com" }
]

keywords = [
    "TCGA", "GDC", "RNA-seq", "bioinformatics",
    "genomics", "cancer", "gene expression"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core dependencies — always installed
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Installed with:  pip install tcga-gdc-downloader[gui]
gui = [
    "streamlit>=1.35",
    "plotly>=5.20",
]
# Installed with:  pip install tcga-gdc-downloader[dev]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",      # mock HTTP requests in tests
    "streamlit>=1.35",
    "plotly>=5.20",
    "black>=24.0",
    "ruff>=0.4",
]

# CLI entry point — makes `tcga-download` available as a terminal command
[project.scripts]
tcga-download = "tcga_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/onedimkurt/tcga-gdc-downloader"
Issues   = "https://github.com/onedimkurt/tcga-gdc-downloader/issues"
Documentation = "https://github.com/onedimkurt/tcga-gdc-downloader/wiki"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["tcga_downloader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short -m 'not integration'"
markers   = [
    "integration: marks tests that require a live GDC API connection (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.run]
source = ["tcga_downloader"]
omit   = ["tests/*"]
